--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,11 @@
-# Compiled Object files
-*.slo
-*.lo
-*.o
-*.obj
+build
+external/build
+external/cmake/cmakepp.cmake
+bin
+console.log
+src/OpenBBG/InternalConfig.h
 
-# Precompiled Headers
-*.gch
-*.pch
 
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
 
-# Fortran module files
-*.mod
-*.smod
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
-
-# Executables
-*.exe
-*.out
-*.app
+# VIM
+*.sw*
